--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9, '3.10']
+        python-version: [3.7, 3.8, 3.9, '3.10', '3.11']
 
     steps:
     - uses: actions/checkout@v3
@@ -17,14 +17,8 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install pipenv for python 3.6
+    - name: Install pipenv
       uses: dschep/install-pipenv-action@v1
-      if: ${{ matrix.python-version == '3.6' }}
-      with:
-        version: 2022.4.20
-    - name: Install pipenv for modern python
-      uses: dschep/install-pipenv-action@v1
-      if: ${{ matrix.python-version != '3.6' }}
     - name: Install dependencies
       run: |
         pipenv install --skip-lock --dev --python `which python`
