--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -23,6 +23,7 @@ jobs:
       run: |
         pipenv install --skip-lock --dev --python `which python`
     - name: Linting and formatting
+      if: ${{ matrix.python-version == '3.11' }}
       run: |
         # stop the build if there are Python syntax errors or undefined names
         pipenv run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
